--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -78,3 +78,44 @@ footer p {
 .google-btn span {
     font-weight: bold;
 }
+
+/*CHAT*/
+#chatContainer {
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+#messagesList {
+    height: 300px;
+    overflow-y: scroll;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #fff;
+}
+
+input[type="text"] {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#sendButton {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;      
+    border: none;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#sendButton:hover {
+    background-color: #0056b3;
+}
