--- a/GreenMarketBackend/Views/Shared/_NavBar.cshtml
+++ b/GreenMarketBackend/Views/Shared/_NavBar.cshtml
@@ -3,64 +3,75 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - GreenMarket</title>
+    <title>@ViewData["Title"] - GreenMarketBackend</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8c34403282.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/41559c54b2.js" crossorigin="anonymous"></script>
 </head>
-<header>
-    <nav class="navbar navbarAcc navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Green Market</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Account" asp-action="Index" style="text-decoration: none ">Account</a>
-                        </li>
-                    }
-                    else
-                    {
-                        <li class="nav-item"><a class="nav-link" asp-controller="Login" asp-action="Index" style="text-decoration: none ">Login</a></li>
-                    }
-                    <li class="nav-item"><a class="nav-link" asp-controller="Products" asp-action="Index" style="text-decoration: none ">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="About" style="text-decoration: none ">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact" style="text-decoration: none ">Contact</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Chat" asp-action="Index" style="text-decoration: none ">Chat</a>
-                    </li>
-                    <li class="nav-item">
-                    @if (User.Identity.IsAuthenticated)
+<body>
+    <header>
+        <nav class="navbar navbarAcc navbar-expand-lg navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">Green Market</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        @if (User.Identity.IsAuthenticated)
                         {
-                        <li class="nav-item">
-                            <form method="post" asp-controller="Account" asp-action="Logout">
-                                <button type="submit" class="nav-link btn btn-link" style="text-decoration: none ">Logout</button>
-                            </form>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Index">Account</a>
+                            </li>
                         }
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Cart")"> 
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-                    </li>
-                </ul>
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Login" asp-action="Index">Login</a>
+                            </li>
+                        }
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Products" asp-action="Index">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="About">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Chat" asp-action="Index">Chat</a>
+                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <form method="post" asp-controller="Account" asp-action="Logout">
+                                    <button type="submit" class="nav-link btn btn-link">Logout</button>
+                                </form>
+                            </li>
+                        }
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Cart")">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
-<main role="main" class="pb-3 mt-5 container-fluid">
-    @RenderBody()
-</main>
-<footer class="text-center py-2 text-white" id="footer">
-    <p>&copy; 2024 Green Market. All Rights Reserved.</p>
-</footer>
-<script src="~/lib/bootstrap/js/boostrap.min.js"></script>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
+        </nav>
+    </header>
+
+    <main role="main" class="pb-3 mt-5 container-fluid">
+        @RenderBody()
+    </main>
+    <footer class="text-center py-2 text-white" id="footer">
+        <p>&copy; 2024 Green Market. All Rights Reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
 </html>
