--- a/GreenMarketBackend/wwwroot/css/styles.css
+++ b/GreenMarketBackend/wwwroot/css/styles.css
@@ -31,12 +31,12 @@ footer {
     width: 100%;
 }
 
-footer p {
-    margin: 0;
-}
+    footer p {
+        margin: 0;
+    }
 
 .navbarAcc {
-    background: #18871e;
+    background-color: #18871e; /* Green background for the navbar */
 }
 
 .navbar-nav .nav-link {
@@ -44,9 +44,6 @@ footer p {
     text-decoration: none;
 }
 
-.navbar-nav .nav-link:hover {
-    text-decoration: underline;
-}
 
 .google-btn {
     display: inline-flex;
@@ -64,11 +61,11 @@ footer p {
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
-.google-btn:hover {
-    background-color: #f5f5f5;
-    border-color: #ccc;
-    color: #333;
-}
+    .google-btn:hover {
+        background-color: #f5f5f5;
+        border-color: #ccc;
+        color: #333;
+    }
 
 .google-icon {
     height: 20px;
@@ -80,7 +77,7 @@ footer p {
     font-weight: bold;
 }
 
-/*CHAT*/
+/* CHAT */
 #chatContainer {
     border: 1px solid #ccc;
     padding: 10px;
@@ -101,7 +98,6 @@ footer p {
 
 input[type="text"] {
     width: 100%;
-    /*margin-bottom: 10px;*/
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -117,7 +113,6 @@ input[type="text"] {
     cursor: pointer;
 }
 
-#sendButton:hover {
-    background-color: #0056b3;
-}
-
+    #sendButton:hover {
+        background-color: #0056b3;
+    }
