--- a/GreenMarketBackend/Views/Products/Details.cshtml
+++ b/GreenMarketBackend/Views/Products/Details.cshtml
@@ -8,13 +8,30 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            @if (!string.IsNullOrEmpty(Model.Product?.ImageURL))
+            @if (Model.Product.Images != null && Model.Product.Images.Count > 0)
             {
-                <img src="@Url.Content("~/images/" + Model.Product.ImageURL)" class="img-fluid" alt="@Model.Product.Name" />
+                <div id="productImageCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        @for (int i = 0; i < Model.Product.Images.Count; i++)
+                        {
+                            <div class="carousel-item @(i == 0 ? "active" : "")">
+                                <img src="@Url.Content("~/images/" + Model.Product.Images.ElementAt(i).ImageURL)" class="d-block w-100" alt="@Model.Product.Name">
+                            </div>
+                        }
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#productImageCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#productImageCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             }
             else
             {
-                <p>No image available</p>
+                <p>No images available</p>
             }
         </div>
         <div class="col-md-6">
