--- a/GreenMarketBackend/Views/Products/Details.cshtml
+++ b/GreenMarketBackend/Views/Products/Details.cshtml
@@ -16,7 +16,7 @@
                         {
                             var image = Model.Product.Images.ElementAt(i);
                             <div class="carousel-item @(i == 0 ? "active" : "")">
-                                <img src="@Url.Content("~/images/" + image.ImageUrl)" class="d-block w-100" alt="Product Image">
+                                <img src="@Url.Content("~/" + image.ImageUrl)" class="d-block w-100" alt="Product Image">
                             </div>
                         }
                     </div>
