--- a/GreenMarketBackend/Views/Products/Edit.cshtml
+++ b/GreenMarketBackend/Views/Products/Edit.cshtml
@@ -36,14 +36,32 @@
                 <span asp-validation-for="StockQuantity" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
+                <label class="form-label">Existing Images</label>
+                <div class="row">
+                    @for (int i = 0; i < Model.ExistingImageUrls.Count; i++)
+                    {
+                        <div class="col-md-3">
+                            <img src="@Url.Content("~/images/" + Model.ExistingImageUrls[i])" class="img-thumbnail" alt="Product Image" />
+                        </div>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group mb-3">
                 <label asp-for="MainImageIndex" class="form-label">Select Main Image</label>
                 <select asp-for="MainImageIndex" class="form-control">
-                    @for (int i = 0; i < Model.ImageFiles.Count; i++)
+                    @for (int i = 0; i < Model.ExistingImageUrls.Count; i++)
                     {
                         <option value="@i">Image @i</option>
                     }
                 </select>
                 <span asp-validation-for="MainImageIndex" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label for="newImages" class="form-label">Upload New Images (Max 5)</label>
+                <input type="file" id="newImages" name="ImageFiles" multiple class="form-control" />
+                <span asp-validation-for="ImageFiles" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Pesticides" class="control-label"></label>
