--- a/GreenMarketBackend/Views/Products/Index.cshtml
+++ b/GreenMarketBackend/Views/Products/Index.cshtml
@@ -100,12 +100,14 @@
                 <div class="col-md-4 product-card" data-category="@product.Category.Name" data-price="@product.Price">
                     <div class="card">
                         <a asp-action="Details" asp-route-id="@product.ProductId" class="text-decoration-none text-dark">
-                            <img src="@product.ImageURL" class="card-img-top" alt="@product.Name">
-                            <div class="card-body">
-                                <h5 class="card-title">@product.Name</h5>
-                                <p class="card-text">@product.Price.ToString("C") - @product.Description</p>
-                                <p class="card-text">Category: @product.Category.Name</p>
-                            </div>
+                            @if (product.Images.Any())
+                            {
+                                <img src="@Url.Content("~/images/" + product.Images.First(i => i.IsMain).ImageUrl)" class="card-img-top" alt="@product.Name">
+                            }
+                            else
+                            {
+                                <img src="~/images/default-product.png" class="card-img-top" alt="@product.Name">
+                            }
                         </a>
                         <div class="card-body">
                             @if (User.IsInRole("Admin"))
