--- a/GreenMarketBackend/Views/Products/Edit.cshtml
+++ b/GreenMarketBackend/Views/Products/Edit.cshtml
@@ -41,7 +41,7 @@
                     @for (int i = 0; i < Model.ExistingImageUrls.Count; i++)
                     {
                         <div class="col-md-3">
-                            <img src="@Url.Content("~/images/" + Model.ExistingImageUrls[i])" class="img-thumbnail" alt="Product Image" />
+                            <img src="@Url.Content("~/" + Model.ExistingImageUrls[i])" class="img-thumbnail" alt="Product Image" />
                             <!-- Checkbox to mark images for removal -->
                             <div class="form-check">
                                 <input type="checkbox" name="RemoveImages" value="@Model.ExistingImageUrls[i]" class="form-check-input" />
